hero section done

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
             </div>
 
         </section>
+
+
+        <!-- hero section -->
+
+        <section>
+            <div class="tex text-center my-24 space-y-5">
+                <h1 class="text-4xl font-bold ">
+                    Adopt  Your  Best Friend
+                </h1>
+                <p class="text-sm text-gray-500">
+                    It is a long established fact that a reader will be distracted by the readable content of a <br> page when looking at its layout. The point of using Lorem Ipsum is that it has a.
+                </p>
+            </div>
+        </section>
     </main>
 
 
