--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <h1 class="font-bold text-7xl">
                         Your Path to Adoption <br> Starts Here
                     </h1>
-                    <p class="text-sm">It is a long established fact that a reader will be distracted by the readable content of a page
+                    <p class="text-sm">It is a long established fact that a reader will be distracted by the readable
+                        content of a page
                         when looking <br> at its layout. The point of using Lorem Ipsum is that it has a.</p>
                     <button class="text-white bg-[#0E7A81] rounded-lg p-4">View More</button>
                 </div>
@@ -83,11 +84,22 @@
         <section>
             <div class="tex text-center my-24 space-y-5">
                 <h1 class="text-4xl font-bold ">
-                    Adopt  Your  Best Friend
+                    Adopt Your Best Friend
                 </h1>
                 <p class="text-sm text-gray-500">
-                    It is a long established fact that a reader will be distracted by the readable content of a <br> page when looking at its layout. The point of using Lorem Ipsum is that it has a.
+                    It is a long established fact that a reader will be distracted by the readable content of a <br>
+                    page when looking at its layout. The point of using Lorem Ipsum is that it has a.
                 </p>
+            </div>
+        </section>
+
+
+        <!-- Pet selection section -->
+        <section>
+            <div class=" w-10/12 mx-auto">
+                <ul id="petContainer" class="flex justify-between items-center text-lg font-semibold p-5  ">
+
+                </ul>
             </div>
         </section>
     </main>
