price button section

--- a/index.html
+++ b/index.html
@@ -96,12 +96,25 @@
 
         <!-- Pet selection section -->
         <section>
-            <div class=" w-10/12 mx-auto">
+            <div class=" w-10/12 mx-auto my-20">
                 <ul id="petContainer" class="flex justify-between items-center text-lg font-semibold p-5  ">
 
                 </ul>
             </div>
         </section>
+
+
+        <!-- price button section -->
+
+        <section>
+            <div class="w-10/12 mx-auto flex justify-between items-center my-28">
+                <h1 class="text-4xl font-bold">Best Deal For you</h1>
+                <button class="text-white bg-[#0E7A81] rounded-lg p-4">Sort by Price</button>
+            </div>
+        </section>
+
+
+        
     </main>
 
 
