--- a/index.html
+++ b/index.html
@@ -114,7 +114,17 @@
         </section>
 
 
-        
+        <!-- Pet card section -->
+         <section>
+            <div class="w-9/12 mx-auto py-10 grid grid-cols-12 gap-8">
+                <div id="petCardContainer" class="grid grid-cols-3 col-span-9">
+                    
+
+                </div>
+                <div class="grid grid-cols-2 col-span-3 ">
+                </div>
+            </div>
+         </section>
     </main>
 
 
